# halide-sar-app

./: .gitignore  Actuator.cpp  Actuator.h  AdaptiveController.cpp  AdaptiveController.h  CMakeLists.txt  ControlLoop.cpp  ControlLoop.h  EnergyMon.cpp  EnergyMon.h  Heartbeat.cpp  Heartbeat.h  ImgPlane.cpp  ImgPlane.h  LICENSE  PlatformData.cpp  PlatformData.h  README.md  arange.cpp  arange_test.cpp  backprojection.cpp  backprojection_debug.h  backprojection_ritsar.cpp  complexfunc.h  cross_test.cpp  dft.cpp  dft.h  halide_complexfunc.h  img_output.cpp  img_output_u8_test.cpp  img_plane.cpp  img_plane.h  interp.cpp  interp_test.cpp  ip.h  linspace_test.cpp  norm.cpp  norm_test.cpp  sarbp.cpp  signal.h  (+8 more)
cmake/: CheckHalideDistributed.cmake  FindCnpy.cmake
cmake/CheckHalideDistributed/: test_set_distributed.cpp
data/: README.md  resize.py
data/AFRL/pass1/HH_ip_npy/: dv.npy  k_u.npy  n_hat.npy  u_hat.npy  v.npy  v_hat.npy
data/AFRL/pass1/HH_ip_npy_txt/: dv.npy  k_u.npy  n_hat.npy  u.npy  u_hat.npy  v_hat.npy
data/AFRL/pass1/HH_npy/: B_IF.npy  R_c.npy  chirprate.npy  delta_r.npy  f_0.npy  freq.npy  k_r.npy  k_y.npy  nsamples.npy  phs.npy  pos.npy  t.npy
data/AFRL/pass1/HH_npy_txt/: B_IF.npy  R_c.npy  chirprate.npy  f_0.npy  freq.npy  k_r.npy  k_y.npy  npulses.npy  nsamples.npy  phs.npy  pos.npy  t.npy
data/Sandia/npy/: B_IF.npy  R_c.npy  chirprate.npy  delta_r.npy  f_0.npy  k_r.npy  n_hat.npy  npulses.npy  nsamples.npy  pos.npy  t.npy
exp/summit/: README.md  sar-AFRL-4096x4096-1-debug.lsf  sar-AFRL-4096x4096-1.lsf  sar-AFRL-4096x4096-16-debug.lsf  sar-AFRL-4096x4096-16.lsf  sar-AFRL-4096x4096-2-debug.lsf  sar-AFRL-4096x4096-2.lsf  sar-AFRL-4096x4096-32-debug.lsf  sar-AFRL-4096x4096-32.lsf  sar-AFRL-4096x4096-4-debug.lsf  sar-AFRL-4096x4096-4.lsf  sar-AFRL-4096x4096-8-debug.lsf  sar-AFRL-4096x4096-8.lsf  sar-Sandia-16384x16384-128.lsf  sar-Sandia-16384x16384-32.lsf  sar-Sandia-16384x16384-64.lsf  sar-Sandia-32768x32768-1024.lsf  sar-Sandia-32768x32768-128.lsf  sar-Sandia-32768x32768-256.lsf  sar-Sandia-32768x32768-512.lsf  sar-Sandia-32768x32768-64.lsf  sar-Sandia-8192x8192-1-gpu.lsf  sar-Sandia-8192x8192-1.lsf  sar-Sandia-8192x8192-128.lsf  sar-Sandia-8192x8192-16-gpu.lsf  sar-Sandia-8192x8192-16.lsf  sar-Sandia-8192x8192-2-gpu.lsf  sar-Sandia-8192x8192-2.lsf  sar-Sandia-8192x8192-32-gpu.lsf  sar-Sandia-8192x8192-32.lsf  sar-Sandia-8192x8192-4-gpu.lsf  sar-Sandia-8192x8192-4.lsf  sar-Sandia-8192x8192-64.lsf  sar-Sandia-8192x8192-8-gpu.lsf  sar-Sandia-8192x8192-8.lsf
exp/summit/darpa-demo2/: README.md  darpa-demo2-adapt.diff  sar-Sandia-1-adapt.lsf  sar-Sandia-16384x16384-128.lsf  sar-Sandia-8192x8192-4-gpu.lsf
exp/summit/darpa-demo2/logs/: SARBP-Sandia-1.763157  SARBP-Sandia-128.763155  SARBP-Sandia-4.763156
exp/summit/map-by-node/: README.md  sar-AFRL-4096x4096-1.lsf  sar-AFRL-4096x4096-16.lsf  sar-AFRL-4096x4096-2.lsf  sar-AFRL-4096x4096-32.lsf  sar-AFRL-4096x4096-4.lsf  sar-AFRL-4096x4096-8.lsf  sar-Sandia-16384x16384-128.lsf  sar-Sandia-16384x16384-32.lsf  sar-Sandia-32768x32768-1024.lsf  sar-Sandia-32768x32768-128.lsf  sar-Sandia-32768x32768-256.lsf  sar-Sandia-32768x32768-512.lsf  sar-Sandia-32768x32768-64.lsf  sar-Sandia-8192x8192-1-gpu.lsf  sar-Sandia-8192x8192-1.lsf  sar-Sandia-8192x8192-128.lsf  sar-Sandia-8192x8192-16.lsf  sar-Sandia-8192x8192-2-gpu.lsf  sar-Sandia-8192x8192-2.lsf  sar-Sandia-8192x8192-32-gpu.lsf  sar-Sandia-8192x8192-32.lsf  sar-Sandia-8192x8192-4-gpu.lsf  sar-Sandia-8192x8192-4.lsf  sar-Sandia-8192x8192-64.lsf  sar-Sandia-8192x8192-8-gpu.lsf  sar-Sandia-8192x8192-8.lsf
exp/summit/map-by-socket-smt4/: README.md  sar-Sandia-16384x16384-128.lsf  sar-Sandia-16384x16384-16.lsf  sar-Sandia-16384x16384-2.lsf  sar-Sandia-16384x16384-256.lsf  sar-Sandia-16384x16384-32.lsf  sar-Sandia-16384x16384-4.lsf  sar-Sandia-16384x16384-64.lsf  sar-Sandia-16384x16384-8.lsf  sar-Sandia-32768x32768-1024.lsf  sar-Sandia-32768x32768-128.lsf  sar-Sandia-32768x32768-16.lsf  sar-Sandia-32768x32768-256.lsf  sar-Sandia-32768x32768-32.lsf  sar-Sandia-32768x32768-512.lsf  sar-Sandia-32768x32768-64.lsf  sar-Sandia-8192x8192-1.lsf  sar-Sandia-8192x8192-128.lsf  sar-Sandia-8192x8192-16.lsf  sar-Sandia-8192x8192-2.lsf  sar-Sandia-8192x8192-32.lsf  sar-Sandia-8192x8192-4.lsf  sar-Sandia-8192x8192-64.lsf  sar-Sandia-8192x8192-8.lsf
test/: CMakeLists.txt  arange.cpp  arange_test.cpp  cross.cpp  interp_test.cpp  linspace.cpp  norm.cpp  norm_test.cpp  repeat.cpp  repeat_test.cpp  stack.cpp  stack_test.cpp  taylor.cpp  taylor_test.cpp
